--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -75,6 +75,8 @@
               <th class="px-6 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Mã KH</th>
               <th class="px-6 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Tên</th>
               <th class="px-6 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">SĐT</th>
+              <th class="px-6 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Zalo</th>
+              <th class="px-6 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Order</th>
               <th class="px-6 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Loại nhu cầu</th>
               <th class="px-6 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Trạng thái</th>
               <th class="px-6 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Người phụ trách</th>
@@ -101,6 +103,22 @@
                     <a href="tel:<%= contact.phone %>" class="text-sm text-gray-900 hover:text-brand-blue">
                       <%= contact.phone %>
                     </a>
+                  </td>
+                  <td class="px-6 py-4 whitespace-nowrap">
+                    <% if contact.zalo_id.present? %>
+                      <div class="text-sm text-blue-600 font-medium"><%= contact.zalo_id %></div>
+                    <% elsif contact.zalo_link.present? %>
+                      <a href="<%= contact.zalo_link %>" target="_blank" class="text-blue-500 hover:text-blue-700">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i> Link
+                      </a>
+                    <% elsif contact.zalo_qr.attached? %>
+                      <span class="text-xs text-green-600"><i class="fa-solid fa-qrcode"></i> QR</span>
+                    <% else %>
+                      <span class="text-gray-400">-</span>
+                    <% end %>
+                  </td>
+                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">
+                    <span class="text-gray-400">-</span>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600"><%= contact.service_type&.name %></td>
                   <td class="px-6 py-4 whitespace-nowrap">
@@ -159,7 +177,7 @@
               <% end %>
             <% else %>
               <tr>
-                <td colspan="8" class="px-6 py-12 text-center">
+                <td colspan="10" class="px-6 py-12 text-center">
                   <div class="flex flex-col items-center gap-2">
                     <i class="fa-solid fa-address-book text-4xl text-gray-300"></i>
                     <p class="text-gray-500">
