feat(ui): add multi-style support (danger/success/info) to confirm dialog and fix Turbo import path

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,9 @@
           <%# Flash Messages %>
           <%= render "shared/flash_messages" %>
 
+          <%# Custom Confirm Dialog %>
+          <%= render "shared/confirm_dialog" %>
+
           <%# Scrollable Content %>
           <div class="flex-1 overflow-auto bg-gray-50 p-6 lg:p-8">
             <%= yield %>
