--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -53,7 +53,7 @@
                       <i class="fa-solid fa-pen-to-square"></i>
                     <% end %>
                     <% if source.contacts.empty? %>
-                      <%= link_to source, method: :delete, data: { confirm: "Bạn có chắc muốn xóa?" }, class: "text-red-600 hover:text-red-900" do %>
+                      <%= button_to source_path(source), method: :delete, data: { turbo_confirm: "Bạn có chắc muốn xóa nguồn '#{source.name}'?" }, class: "text-red-600 hover:text-red-900", form: { class: "inline" } do %>
                         <i class="fa-solid fa-trash"></i>
                       <% end %>
                     <% end %>
