--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -135,6 +135,6 @@
       Hủy
     <% end %>
     <%= f.submit @contact.persisted? ? "Cập nhật" : "Tạo khách hàng", 
-        class: "px-6 py-2.5 bg-brand-blue hover:bg-blue-800 text-white rounded-lg font-medium transition-colors cursor-pointer" %>
+        class: "px-6 py-2.5 bg-[#0B387A] hover:bg-blue-800 text-white rounded-lg font-medium transition-colors cursor-pointer" %>
   </div>
 <% end %>
