--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -40,6 +40,6 @@
 
   <div class="flex items-center justify-end space-x-4 max-w-2xl mx-auto">
     <%= link_to "Hủy bỏ", holidays_path, class: "px-6 py-2.5 border border-gray-300 rounded-lg text-gray-700 hover:bg-gray-50 font-medium transition-colors" %>
-    <%= f.submit holiday.new_record? ? "Tạo ngày nghỉ" : "Cập nhật", class: "px-6 py-2.5 bg-brand-blue text-white rounded-lg hover:bg-blue-900 font-medium shadow-lg shadow-blue-500/30 transition-colors cursor-pointer" %>
+    <%= f.submit holiday.new_record? ? "Tạo ngày nghỉ" : "Cập nhật", class: "px-6 py-2.5 bg-[#0B387A] text-white rounded-lg hover:bg-blue-900 font-medium shadow-lg shadow-blue-500/30 transition-colors cursor-pointer" %>
   </div>
 <% end %>
