style(icons): change pick customer icon from hand-pointer to dollar-sign

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -156,7 +156,7 @@
                             class: "text-green-600 hover:text-green-900 transition-colors",
                             title: "Nhận khách này",
                             data: { turbo_confirm: "Bạn có chắc muốn nhận khách #{contact.name}?" } do %>
-                          <i class="fa-solid fa-hand-pointer text-lg"></i>
+                          <i class="fa-solid fa-dollar-sign text-lg"></i>
                         <% end %>
                       <% end %>
                       
