--- a/app/views/sales_workspace/show.html.erb
+++ b/app/views/sales_workspace/show.html.erb
@@ -147,7 +147,7 @@
                 <div class="mt-0.5">
                   <% icon = case activity.action
                      when 'login' then 'fa-right-to-bracket text-blue-500'
-                     when 'contact.pick' then 'fa-hand-pointer text-brand-blue'
+                     when 'contact.pick' then 'fa-dollar-sign text-brand-blue'
                      when 'contact.create' then 'fa-user-plus text-green-500'
                      when 'contact.update' then 'fa-pen text-orange-500'
                      when 'contact.call' then 'fa-phone text-green-600'
