--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -173,7 +173,7 @@
               method: :post,
               form: { data: { turbo_confirm: "Bạn có chắc muốn nhận khách hàng này?" } },
               class: "flex-1 flex items-center justify-center gap-2 bg-green-600 hover:bg-green-700 text-white px-4 py-3 rounded-lg font-medium shadow-md transition-colors" do %>
-            <i class="fa-solid fa-hand-pointer"></i>
+            <i class="fa-solid fa-dollar-sign"></i>
             <span>Nhận khách này</span>
           <% end %>
         <% end %>
