--- a/app/views/sales_workspace/_contact_list.html.erb
+++ b/app/views/sales_workspace/_contact_list.html.erb
@@ -1,4 +1,7 @@
 <turbo-frame id="contact_list_frame">
+<%# TASK-035: Real-time subscription for new contacts %>
+<%= turbo_stream_from "user_#{current_user.id}_contacts" %>
+
 <div class="overflow-x-auto">
   <table class="min-w-full divide-y divide-gray-100">
     <thead class="bg-gray-50 border-b border-gray-100">
@@ -10,7 +13,7 @@
         <th scope="col" class="pl-3 pr-6 py-4 text-right text-xs font-bold text-gray-500 uppercase tracking-wider">Hành động</th>
       </tr>
     </thead>
-    <tbody class="bg-white divide-y divide-gray-100">
+    <tbody id="new_contacts_table_body" class="bg-white divide-y divide-gray-100">
       <% contacts.each do |contact| %>
         <tr class="hover:bg-blue-50/50 transition-all duration-200 group relative">
           <!-- Customer Info -->
